# imgfkr

./: .gitignore  Cargo.toml  README.md  pyproject.toml  run.sh
src/: lib.rs
src/imgfkr/: __init__.py  core.pyi
